<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/guideback"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InstructActivity" >

    <com.example.soundmaze.MicButton
        android:id="@+id/buttonMicrophone"
        android:layout_width="@dimen/heightMainMic"
        android:layout_height="@dimen/heightMainMic"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:background="@drawable/button_mic"
        android:contentDescription="@string/buttonMicrophoneContentDescription"
        android:gravity="center"
        android:padding="20dp"
        android:src="@drawable/ic_btn_speak_now" />

    <TextView
        android:id="@+id/textViewInstruct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonMicrophone"
        android:layout_toRightOf="@+id/buttonMicrophone"
        android:text="@string/instruct"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tvFeedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewInstruct"
        android:layout_below="@+id/buttonMicrophone"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:padding="8dp"
        android:text=""
        android:textColor="@color/red"
        android:textSize="@dimen/textSizeMainFeedback" />

    <TextView
        android:id="@+id/colorshelp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFeedback"
        android:layout_marginTop="100dp"
        android:text="@string/yellow_you_can_press_the_button_and_it_wil_listen_nred_we_are_listening_speak_npurple_we_heard_you_analyzing_results"
        android:textColor="@color/white"
        android:textSize="@dimen/textSizeMainFeedback" />

</RelativeLayout>